syntax = "proto3";

option java_package = "com.gRPC.swe";

//service
service user{
  rpc LogIn(LogInRequest) returns (APIResponse);
  rpc Register(RegisterRequest) returns (APIResponse);
}

message LogInRequest{
  string userName = 1;
  string password = 2;
}

message APIResponse{
  string responseMessage = 1;
  int32 responseCode = 2;
}

message RegisterRequest{
  int64 registrationID = 1;
  string name = 2;
}

